<resources>
    <string name="app_name">Lms Customer</string>
    <string name="lms_app_name">Loan Management System</string>
    <string name="get_to_start">Get to start</string>
    <string name="check_eligibility">Check Eligibility</string>
    <string name="loan_status">Loan Status</string>
    <string name="pay_installment">Pay Installment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="national_id">National ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="image_desc">image desc</string>
    <string name="apply_for_loan_btn">Apply for loan</string>
    <string name="profile_image">Profile Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nominee_info">Nominee Info</string>
    <string name="loan_holder">Loan Holder</string>
</resources>
