<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UpdateNomineeProfileFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/mp_10">

        <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/nomineeProfileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile_image"
            android:gravity="center"
            android:contentDescription="@string/image_desc" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mp_15"
            android:layout_marginTop="@dimen/mp_10"
            android:layout_marginRight="@dimen/mp_15"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:hint="Name"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomineeFullName"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="Profession"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomineeProfession"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="Address"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomineeAddress"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Distric">
                <AutoCompleteTextView
                    android:id="@+id/districAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Thana">
                <AutoCompleteTextView
                    android:id="@+id/thanaAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="Post Code"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomineePostCode"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/date_of_birth"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomineeDob"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/phone_number"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomineePhoneNumber"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/email_address"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomineeEmailNumber"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/national_id"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomineeNidNo"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:weightSum="2"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/nidFront"
                    android:src="@drawable/nid_front"
                    android:scaleType="fitXY"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>
                <ImageView
                    android:id="@+id/nidBack"
                    android:src="@drawable/nid_back"
                    android:scaleType="fitXY"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mp_20"
            android:layout_marginTop="@dimen/mp_20"
            android:layout_marginRight="@dimen/mp_20"
            android:layout_marginBottom="@dimen/mp_10"
            android:background="@drawable/new_button_design_two"
            android:text="Update Profile"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>