<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/toolbarProfileImage"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:contentDescription="@string/app_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/userFullName"
                android:text="Hi, Atiqur Rahman"
                android:textSize="18sp"
                android:textStyle="normal"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/updateProfileParent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="@dimen/mp_15"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/profileCompleteStatusTv"
                        android:text="Profile 20% Complete"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/updateProfileTv"
                        android:text="Update Profile"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp">
                    <View
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/status_green"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <View
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/status_green"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <View
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/status_white"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <View
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/status_white"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <View
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/status_white"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/handsetRecycler"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:id="@+id/rlbootoom_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/mp_max"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:background="@drawable/left_side_corner_blue">
                <View
                    android:id="@+id/slider_header_home"
                    android:layout_width="150dp"
                    android:layout_height="10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/top_corner_red"/>
                <TextView
                    android:id="@+id/txtgetstart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/slider_header_home"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/mp_15"
                    android:textColor="@color/Purple"
                    android:text="@string/get_to_start"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/llbootommenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtgetstart"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:onClick="checkEligibility"
                        android:layout_marginBottom="@dimen/mp_10"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/eligibility"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="40dp"
                            android:layout_height="40dp"/>
                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:text="@string/check_eligibility"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:onClick="loadStatus"
                        android:layout_marginBottom="@dimen/mp_10"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/loan"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="40dp"
                            android:layout_height="40dp"/>
                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:text="@string/loan_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:onClick="payInstallment"
                        android:orientation="vertical"
                        android:layout_marginBottom="@dimen/mp_10"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/payinstallment"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="40dp"
                            android:layout_height="40dp"/>
                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:text="@string/pay_installment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        app:itemTextColor="#020659"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        />
</androidx.drawerlayout.widget.DrawerLayout>